<resources>
    <string name="app_name">Watchlist</string>
    <string name="judul">Title</string>
    <string name="tglRilis">Release Year</string>
    <string name="deskripsi">Description</string>
    <string name="rating">8.0</string>
    <string name="poster">Poster</string>
    <string name="back_button">back button</string>
    <string name="tambahkan_ke_watchlist">Add to Watchlist</string>
    <string name="movies">Movies</string>
    <string name="tv_series">TV Series</string>
    <string name="watchlist">Watchlist</string>
    <string name="profile">Profile</string>
    <string name="change_language_settings">Change Language</string>

    <string-array name="data_title">
        <item>A Star is Born</item>
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Creed II</item>
        <item>Once Upon a Deadpool</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Dragonball Super: Broly</item>
    </string-array>

    <string-array name="data_description">
        <item>Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his family\'s past, Adonis Creed is up against the challenge of his life.</item>
        <item>A kidnapped Fred Savage is forced to endure Deadpool\'s PG-13 rendition of Deadpool 2 as a Princess Bride-esque story that\'s full of magic, wonder &amp; zero F\'s.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>Earth is peaceful following the Tournament of Power. Realizing that the universes still hold many more strong people yet to see, Goku spends all his days training to reach even greater heights. Then one day, Goku and Vegeta are faced by a Saiyan called \'Broly\' who they\'ve never seen before. The Saiyans were supposed to have been almost completely wiped out in the destruction of Planet Vegeta, so what\'s this one doing on Earth? This encounter between the three Saiyans who have followed completely different destinies turns into a stupendous battle, with even Frieza (back from Hell) getting caught up in the mix.</item>
    </string-array>

    <array name="data_photo">
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_dragonball</item>
    </array>

    <string-array name="data_rating">
        <item>7.5</item>
        <item>6.8</item>
        <item>8.3</item>
        <item>7.0</item>
        <item>8.0</item>
        <item>6.5</item>
        <item>6.7</item>
        <item>6.9</item>
        <item>7.7</item>
        <item>7.5</item>
    </string-array>

    <string-array name="data_tahun">
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
    </string-array>

    <string-array name="series_title">
        <item>The Mandalorian</item>
        <item>Breaking Bad </item>
        <item>The Boys</item>
        <item>Stranger Things</item>
        <item>Bodyguard</item>
        <item>Marvel\'s The Punisher</item>
        <item>Marvel\'s Daredevil</item>
        <item>Sex Education</item>
        <item>Game of Thrones</item>
        <item>Brooklyn Nine-Nine</item>
    </string-array>

    <string-array name="series_description">
        <item>Set after the fall of the Empire and before the emergence of the First Order, we follow the travails of a lone gunfighter in the outer reaches of the galaxy far from the authority of the New Republic.</item>
        <item>When Walter White, a New Mexico chemistry teacher, is diagnosed with Stage III cancer and given a prognosis of only two years left to live. He becomes filled with a sense of fearlessness and an unrelenting desire to secure his family\'s financial future at any cost as he enters the dangerous world of drugs and crime.</item>
        <item>A group of vigilantes known informally as “The Boys” set out to take down corrupt superheroes with no more than blue-collar grit and a willingness to fight dirty.</item>
        <item>When a young boy vanishes, a small town uncovers a mystery involving secret experiments, terrifying supernatural forces, and one strange little girl.</item>
        <item>A troubled war veteran is assigned to protect a controversial politician who may be the target of a terror plot.</item>
        <item>A former Marine out to punish the criminals responsible for his family\'s murder finds himself ensnared in a military conspiracy.</item>
        <item>Lawyer-by-day Matt Murdock uses his heightened senses from being blinded as a young boy to fight crime at night on the streets of Hell’s Kitchen as Daredevil.</item>
        <item>Inexperienced Otis channels his sex therapist mom when he teams up with rebellious Maeve to set up an underground sex therapy clinic at school.</item>
        <item>Seven noble families fight for control of the mythical land of Westeros. Friction between the houses leads to full-scale war. All while a very ancient evil awakens in the farthest north. Amidst the war, a neglected military order of misfits, the Night\'s Watch, is all that stands between the realms of men and icy horrors beyond.</item>
        <item>A single-camera ensemble comedy following the lives of an eclectic group of detectives in a New York precinct, including one slacker who is forced to shape up when he gets a new boss.</item>
    </string-array>

    <array name="series_photo">
        <item>@drawable/poster_mandalorian</item>
        <item>@drawable/poster_breaking_bad</item>
        <item>@drawable/poster_the_boys</item>
        <item>@drawable/poster_stranger_things</item>
        <item>@drawable/poster_bodyguard</item>
        <item>@drawable/poster_punisher</item>
        <item>@drawable/poster_daredevil</item>
        <item>@drawable/poster_sex_education</item>
        <item>@drawable/poster_game_of_thrones</item>
        <item>@drawable/poster_brooklyn_99</item>
    </array>

    <string-array name="series_rating">
        <item>7.6</item>
        <item>8.5</item>
        <item>8.1</item>
        <item>8.3</item>
        <item>8.1</item>
        <item>8.0</item>
        <item>7.8</item>
        <item>8.0</item>
        <item>8.1</item>
        <item>7.7</item>
    </string-array>

    <string-array name="series_tahun">
        <item>2019 – present</item>
        <item>2008 – 2012</item>
        <item>2019 – present</item>
        <item>2016 – present</item>
        <item>2018</item>
        <item>2017 – 2019</item>
        <item>2015 – 2018</item>
        <item>2019 – present</item>
        <item>2011 – 2019</item>
        <item>2013 – present</item>
    </string-array>


</resources>
